// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts an array 1`] = `".cdd1pm5{text-decoration-line:underline overline}"`;

exports[`converts fontSize pixels 1`] = `".c1eftxfu{font-size:0.875rem}"`;

exports[`converts to pixels 1`] = `".csaw36d{padding-left:2px}"`;

exports[`does not converts to pixels 1`] = `".cu2kwdz{opacity:1}"`;

exports[`does not override longhand 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    paddingTop: \\"c1xiyxc9\\",
    paddingRight: \\"c1wgquni\\",
    paddingBottom: \\"c1s7zyp4\\",
    paddingLeft: \\"c17qt1w7\\"
  }
};
\\"c1xiyxc9 \\" + (\\"c1wgquni \\" + (\\"c1s7zyp4 \\" + \\"c17qt1w7 \\"));"
`;

exports[`does not override longhand 2`] = `".c1xiyxc9{padding-top:1rem}.c1wgquni{padding-right:1rem}.c1s7zyp4{padding-bottom:1rem}.c17qt1w7{padding-left:2rem}"`;

exports[`expands shorthand 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    paddingTop: \\"c1xiyxc9\\",
    paddingRight: \\"c1wgquni\\",
    paddingBottom: \\"c1s7zyp4\\",
    paddingLeft: \\"cc3nx7y\\"
  }
};
\\"c1xiyxc9 \\" + (\\"c1wgquni \\" + (\\"c1s7zyp4 \\" + \\"cc3nx7y \\"));"
`;

exports[`expands shorthand 2`] = `".c1xiyxc9{padding-top:1rem}.c1wgquni{padding-right:1rem}.c1s7zyp4{padding-bottom:1rem}.cc3nx7y{padding-left:1rem}"`;

exports[`supports arrow function 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"c1r9f2e5\\"
  }
};

const get = state => state ? \\"c1r9f2e5 \\" : \\"\\";"
`;

exports[`supports arrow function 2`] = `".c1r9f2e5{color:blue}"`;

exports[`supports constants 1`] = `".c1r9f2e5{color:blue}"`;
